# QuoteBot

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: code_quality.yml  docker-image.yml  pylint.yml  ruff.yml
ci-cd/: bot.Dockerfile  minio.Dockerfile  webapp.Dockerfile
env/: .env.example
scripts/: bot-entrypoint.sh  webapp-entrypoint.sh
src/bot/: bot.py  pyproject.toml  settings.py
src/bot/config/: constants.py  settings.py  utils.py
src/bot/filters/: admin.py
src/bot/handlers/: base_commands.py  quiz.py  quotes.py  quotes_multiple_images.py
src/bot/services/: command_settings.py
src/webapp/: main.py  pyproject.toml
src/webapp/config/: database.py  minio_field.py  named_file.py  settings.py
src/webapp/dictionary/: models.py  router.py  schemas.py
src/webapp/migrations/: env.py
src/webapp/migrations/versions/: 2024_05_01_0431-23a493d90a96_initial.py  2024_05_04_0720-f8870244cc08_initial_migration.py  2024_05_04_1309-121014791901_initial_commit.py  2024_06_26_1345-abe7995ea6f3_add_quiz_model.py  2024_07_18_1330-a5aa3e105fd0_added_multiple_image_and_image_tables.py
src/webapp/quotes/: models.py  router.py  schemas.py  utils.py
