[tool.poetry]
name = "quotebot"
version = "0.1.0"
description = "app for managing posts in telegram"
authors = ["Simon Druchinin, Prosyannikov German"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
quote_client = { path = "./src/packages/quote_client", develop = true }
image_text = { path = "./src/packages/image_text", develop = true }
unsplash_client = { path = "./src/packages/unsplash_client", develop = true }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
