[tool.poetry]
name = "quotebot"
version = "0.1.0"
description = "app for managing posts in telegram"
authors = ["Simon Druchinin, Prosyannikov German"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"

[tool.ruff]
preview = false
line-length = 120
exclude = ["migrations"]

[tool.ruff.lint]
select = [ "E", "F", "A", "Q", "B", "COM", "C4", "DJ", "FIX", "PIE", "T20", "PT", "RET", "SIM", "N", "ERA", "ISC", "I"]

[tool.ruff.lint.pep8-naming]
classmethod-decorators = ["pydantic.field_validator"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
