[tool.poetry]
name = "quotebot"
version = "0.1.0"
description = "app for managing posts in telegram"
authors = ["Simon Druchinin, Prosyannikov German"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
quote_client = { path = "./src/packages/quote_client", develop = true }
image_text_client = { path = "./src/packages/image_text_client", develop = true }
unsplash_client = { path = "./src/packages/unsplash_client", develop = true }

[tool.poetry.group.lint.dependencies]
ruff = "0.4.2"

[tool.poetry.group.mypy.dependencies]
mypy = "1.10.0" 
mypy-extensions = "1.0.0"
pydantic = "2.7.1"

[tool.ruff]
preview = false
line-length = 120
exclude = ["migrations"]

[tool.ruff.lint]
select = [ "E", "F", "A", "Q", "B", "COM", "C4", "DJ", "FIX", "PIE", "T20", "PT", "RET", "SIM", "N", "ERA", "ISC", "I"]

[tool.ruff.lint.pep8-naming]
classmethod-decorators = ["pydantic.field_validator"]

[tool.mypy]
exclude = ["^settings\\.py$", "webapp"]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
