[tool.poetry]
name = "telegram bot"
version = "0.1.0"
description = "bot for managing posts in telegram"
authors = ["Simon Druchinin, Prosyannikov German"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
aiogram = "^3.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
