[tool.poetry]
name = "telegram bot"
version = "0.1.0"
description = "bot for managing posts in telegram"
authors = ["Simon Druchinin, Prosyannikov German"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
aiogram = "^3.5.0"
requests = "^2.31.0"
quote_post_client = {path = "../packages/quote_post_client"}
aiohttp = "^3.9.5"
loguru = "^0.7.2"
apscheduler = "^3.10.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
