[tool.poetry]
name = "webapp"
version = "0.1.0"
description = "webapp for managing posts in telegram"
authors = ["Simon Druchinin, Prosyannikov German"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110.3"
gunicorn = "^22.0.0"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
sqlalchemy = "^2.0.29"
alembic = "^1.13.1"
asyncpg = "^0.29.0"
sqlalchemy-utils = "^0.41.2"
sqlalchemy-file = "^0.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
